fix: docker compose debug udp fix

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -6,6 +6,6 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-    command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:65530 listener.py "]
+    command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:65530/udp listener.py "]
     ports:
-      - 65530:65530
+      - 65530:65530/udp
